--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,6 @@ form {
 .button {
   border-radius: 40px;
   border: 1px solid var(--color-button);
-  border: none;
   color: var(--color-button);
   cursor: pointer;
   font-size: 1rem;
@@ -23,4 +22,9 @@ form {
   padding: 1.5rem 3rem;
   text-align: center;
   text-transform: uppercase;
+  transition: background-color 0.18s;
+}
+button:hover {
+  background-color: var(--color-button);
+  color: var(--color-white);
 }
