--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,12 @@
 :root {
   --color-button: #1b0760;
   --color-white: #fff;
+  --color-lightpurple: #8268ab;
+}
+body {
+  font-family: Arial, Helvetica, sans-serif;
 }
 form {
-  font-family: Arial, Helvetica, sans-serif;
   max-width: 400px;
 }
 .form-input {
@@ -27,4 +30,19 @@ form {
 button:hover {
   background-color: var(--color-button);
   color: var(--color-white);
+}
+.navigation ul {
+  list-style-type: none;
+  font-size: 1rem;
+}
+.navigation li a {
+  text-decoration: none;
+  font-size: 1.1rem;
+}
+
+.navigation li a:hover {
+  color: var(--color-lightpurple);
+}
+table td a:hover {
+  color: var(--color-lightpurple);
 }
