--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,11 @@
   --color-button: #1b0760;
   --color-white: #fff;
   --color-lightpurple: #8268ab;
+  --color-gray: #696969;
+  --color-black: #000;
 }
 body {
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 form {
   max-width: 400px;
@@ -45,4 +47,14 @@ button:hover {
 }
 table td a:hover {
   color: var(--color-lightpurple);
+}
+p {
+  color: var(--color-gray);
+  line-height: 1.5;
+}
+h3 {
+  color: var(--color-gray);
+}
+.testimonial {
+  color: var(--color-black);
 }
