--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,9 @@ button:hover {
   font-size: 1.1rem;
   text-decoration: none;
 }
+.navigation li {
+  margin-bottom: 10px;
+}
 
 .navigation li a:hover {
   color: var(--color-lightpurple);
